--- a/dev/css/_advantages.scss
+++ b/dev/css/_advantages.scss
@@ -49,6 +49,10 @@
     left: 23px;
     bottom: 28px;
     z-index: 2;
+
+    .conf-mob {
+      display: none;
+    }
   }
 
   //media
@@ -65,6 +69,11 @@
     background-size: 100% 100%;
     padding-top: 90px;
     padding-bottom: 40px;
+
+    p {
+      font-size: 18px;
+      left: 6px;
+    }
 
     .caption {
       margin-bottom: 40px;
@@ -98,30 +107,50 @@
     }
   }
 
-  @media (max-width: 520px) {
+  @media (max-width: 535px) {
+
+   .overlay {
+      background: linear-gradient(360deg, #FFFFFF 5.33%, rgba(255, 255, 255, 0) 80.84%);
+    }
+
     p {
       line-height: 128.68%;
       bottom: 15px;
-      font-size: 14px;
+     // font-size: 18px;
+
+      .conf {
+        display: none;
+      }
+
+      .conf-mob {
+        display: inline-block;
+      }
     }
   }
 
-  @media (max-width: 474px) {
+  //@media (max-width: 474px) {
+  //  p {
+  //    font-size: 12px;
+  //    bottom: 12px;
+  //  }
+  //}
+
+  @media (max-width: 455px) {
     p {
-      font-size: 12px;
-      bottom: 12px;
+   font-size: 17px;
     }
   }
 
   @media (max-width: 420px) {
     p {
-      font-size: 10px;
+      font-size: 14px;
     }
   }
 
   @media (max-width: 370px) {
     p {
-      font-size: 8px;
+      font-size: 12px;
+      left: 3px;
     }
   }
 
